 . Actions: ScaleTo & ScaleBy supports X and Y factors (issue #156)
 . Actions: Added collections of Ease Actions (issue #157)
 . Chipmunk: cpFlaot is a float, not a double (issue #130)
 . CocosNode: fixed absolutePosition (issue #140)
 . CocosNode: unschedule timers only when running (issue #142)
 . CocosNode: prevents crash under certain circumstances while executing actions (issue #141)
 . Demos: SpritesDemo has an improved Accelerate example (issue #168)
 . Demos: ParticlesDemo has the Rain Particle example (issue #136)
 . Director: allow cleanup when deallocing the director (issue #144)
 . Director: avoid useless GL commands when displaying FPS (issue #162)
 . Director: possibility to change the DepthBuffer size (issue #160)
 . Menu: MenuItemToggle supports assigning the selectedIndex (issue #152)
 . Menu: aligment takes into account if status bar is present (issue #131)
 . MenuItem: improved compiler warning (issue #147)
 . Misc: added 'f' to numbers so they are floats, not doubles (issue #130)
 . Particles: added ParticleRain (issue #136)
 . Sprites: fixed possible memory leaks (issue #139)
 . Particles: center of emitter can be moved independently from position (issue #138)
 . Texture2D: prevent allocating more memory than needed (issue #154)
 . TextureMgr: supports directories withing the image name (issue #151)
 . TileMapAtlas: fixed bug when using TGA files (issue #124)
 . TileMapAtlas: supports up to 255 chars (issue #153)

version 0.6.2 - 24-Dec-2008
 . Actions: Accelerate & Speed ratios can be modified at runtime (issue #127)
 . CocosNode: added absolutePosition (issue #9 & issue #122)
 . CocosNode: tag is propagated when adding children (issue #118)
 . CocosNode: change change z-order at runtime (issue #59)
 . Demos: Chipmunk_Accel supports multiple touches (issue #129)
 . Demos: fixed typo in MenuTest (issue #111)
 . Demos: shows how to set multiple Touches and other options (issue #116)
 . Director: Touches work fast again (issue #126)